--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-
+        <link rel="stylesheet" href="//at.alicdn.com/t/font_437171_0z4oljeo19fz85mi.css">
+        <link rel="stylesheet" href="css/flexslider.css">
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/respond.min.js"></script>
@@ -20,13 +21,178 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="navbar">
+        <div class="navbar-wrapper">
             <div class="container">
-                <div class="navbar-header">
-                    <img src="img/logo.jpg" alt="">
+                <div class="navbar navbar-default">
+                    <div class="navbar-header">
+                        <a href="" class="navbar-brand">
+                            <img src="img/logo.jpg" alt="">
+                        </a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="active">
+                            <a href="">首页</a>
+                        </li>
+                        <li>
+                            <a href="">旅行产品</a>
+                        </li>
+                        <li>
+                            <a href="">旅行故事</a>
+                        </li>
+                        <li>
+                            <a href="">走进斑马</a>
+                        </li>
+                        <li>
+                            <a href="">售卖渠道</a>
+                        </li>
+                        <li>
+                            <a href="">同业入口</a>
+                        </li>
+                    </ul>
+                    <a href="" class="btn btn-sm btn-reverse navbar-btn">我的斑马</a>
                 </div>
             </div>
         </div>
+        <div class="flexslider main">
+            <ul class="slides">
+                <li style="background-image: url(img/banner1.jpg);">
+                </li>
+                <li style="background-image: url(img/banner1.jpg);">
+                </li>
+                <li style="background-image: url(img/banner1.jpg);">
+                </li>
+            </ul>
+        </div>
+        <div class="category">
+            <div class="container">
+                <div class="category-hd">
+                    <h2>斑马承诺</h2>
+                    <p class="secondary">Banma's commitment</p>
+                </div>
+                <div class="category-bd">
+                    <div class="col-4 service">
+                        <div class="icon">
+                            <span class="iconfont icon-travel"></span>
+                        </div>
+                        <div class="desc">
+                            <h4>资源保障</h4>
+                            <p>海量丰富的目的地资源</p>
+                        </div>
+                    </div>
+                    <div class="col-4 service">
+                        <div class="icon">
+                            <span class="iconfont icon-good"></span>
+                        </div>
+                        <div class="desc">
+                            <h4>专业保障</h4>
+                            <p>旅行达人为你定制方案</p>
+                        </div>
+                    </div>
+                    <div class="col-4 service">
+                        <div class="icon">
+                            <span class="iconfont icon-zuanshi"></span>
+                        </div>
+                        <div class="desc">
+                            <h4>品质保障</h4>
+                            <p>专车专导，酒店可优选</p>
+                        </div>
+                    </div>
+                    <div class="col-4 service">
+                        <div class="icon">
+                            <span class="iconfont icon-erji"></span>
+                        </div>
+                        <div class="desc">
+                            <h4>服务保障</h4>
+                            <p>24小时的私人管家在线</p>
+                        </div>
+                    </div>
+                    <div class="col-4 service">
+                        <div class="icon">
+                            <span class="iconfont icon-note"></span>
+                        </div>
+                        <div class="desc">
+                            <h4>行程保障</h4>
+                            <p>拒绝购物，行程可微调</p>
+                        </div>
+                    </div>
+                    <div class="col-4 service">
+                        <div class="icon">
+                            <span class="iconfont icon-baozhang"></span>
+                        </div>
+                        <div class="desc">
+                            <h4>售后保障</h4>
+                            <p>以用户至上的赔付体系</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="category">
+            <div class="container">
+                <div class="category-hd">
+                    <h2>走进斑马</h2>
+                    <p class="secondary">About BanmaTrip</p>
+                </div>
+                <div class="category-bd">
+                    <div class="flexslider about">
+                        <ul class="slides">
+                            <li>
+                                <div class="about-left">
+                                    <img src="img/about.jpg" alt="">
+                                </div>
+                                <div class="about-right">
+                                    <div class="about-right-title">
+                                        <span class="iconfont icon-building"></span>
+                                        <span class="title">斑马大事记</span>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            斑马旅游，致力于打造为3亿人提供高品质旅行体验的互联网旅游服务平台，为每一位向往远方的游人提供安心、舒适、高品质的旅游体验。2016年2月1日，斑马旅游正式成立。重点专注于【私家小团】【MINI团】【私人定制】等多项服务。短短88天时间，斑马旅游就成为携程泰国核心供应商、定制游金牌供应商。2017年1月26日，斑马旅游荣获旅游圈2016年年度最佳产品设计奖，同时全面入驻各大旅游平台。
+                                        </p>
+                                        <a href="" class="btn btn-primary">查看更多</a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="category">
+            <div class="container">
+                <div class="category-hd">
+                    <h2>旅行故事</h2>
+                    <p class="secondary">Travel Stories</p>
+                </div>
+                <div class="category-bd story">
+                    <div class="col-3">
+                        <a href="">
+                            <img src="img/story.jpg" alt="">
+                            <div class="story-overlay">
+                                <h1>日本</h1>
+                                <p>我喜欢这繁华近在咫尺，却在城市的一隅，保持着自己姿态的烟火气。我感受着斑马旅游的人文温度，它让我明白，定制不一定贵的，它只是给你惊喜的一段旅程。</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-3">
+                        <a href="">
+                            <img src="img/story.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-3">
+                        <a href="">
+                            <img src="img/story.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-3">
+                        <a href="">
+                            <img src="img/story.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
 
