--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,24 @@
                                 <div class="about-right">
                                     <div class="about-right-title">
                                         <span class="iconfont icon-building"></span>
-                                        <span class="title">斑马大事记</span>
+                                        <span class="title">斑马大事记1</span>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            斑马旅游，致力于打造为3亿人提供高品质旅行体验的互联网旅游服务平台，为每一位向往远方的游人提供安心、舒适、高品质的旅游体验。2016年2月1日，斑马旅游正式成立。重点专注于【私家小团】【MINI团】【私人定制】等多项服务。短短88天时间，斑马旅游就成为携程泰国核心供应商、定制游金牌供应商。2017年1月26日，斑马旅游荣获旅游圈2016年年度最佳产品设计奖，同时全面入驻各大旅游平台。
+                                        </p>
+                                        <a href="" class="btn btn-primary">查看更多</a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="about-left">
+                                    <img src="img/about.jpg" alt="">
+                                </div>
+                                <div class="about-right">
+                                    <div class="about-right-title">
+                                        <span class="iconfont icon-building"></span>
+                                        <span class="title">斑马大事记2</span>
                                     </div>
                                     <div>
                                         <p>
