--- a/src/index.html
+++ b/src/index.html
@@ -194,18 +194,74 @@
                     <div class="col-3">
                         <a href="">
                             <img src="img/story.jpg" alt="">
+                            <div class="story-overlay">
+                                <h1>日本</h1>
+                                <p>我喜欢这繁华近在咫尺，却在城市的一隅，保持着自己姿态的烟火气。我感受着斑马旅游的人文温度，它让我明白，定制不一定贵的，它只是给你惊喜的一段旅程。</p>
+                            </div>
                         </a>
                     </div>
                     <div class="col-3">
                         <a href="">
                             <img src="img/story.jpg" alt="">
+                            <div class="story-overlay">
+                                <h1>日本</h1>
+                                <p>我喜欢这繁华近在咫尺，却在城市的一隅，保持着自己姿态的烟火气。我感受着斑马旅游的人文温度，它让我明白，定制不一定贵的，它只是给你惊喜的一段旅程。</p>
+                            </div>
                         </a>
                     </div>
                     <div class="col-3">
                         <a href="">
                             <img src="img/story.jpg" alt="">
+                            <div class="story-overlay">
+                                <h1>日本</h1>
+                                <p>我喜欢这繁华近在咫尺，却在城市的一隅，保持着自己姿态的烟火气。我感受着斑马旅游的人文温度，它让我明白，定制不一定贵的，它只是给你惊喜的一段旅程。</p>
+                            </div>
                         </a>
                     </div>
+                </div>
+                <div class="category-ft">
+                    <a href="" class="btn btn-reverse btn-lg category-action">查看更多</a>
+                </div>
+            </div>
+        </div>
+        <div class="category">
+            <div class="container">
+                <div class="category-hd">
+                    <h2>精选旅游线路</h2>
+                    <p class="secondary">Selected Travel Deal</p>
+                </div>
+                <div class="category-bd">
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">全部</a></li>
+                        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">东南亚</a></li>
+                        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">日本</a></li>
+                        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">欧洲</a></li>
+                        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">美国</a></li>
+                        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">国内</a></li>
+                    </ul>
+
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="home">
+                            <div class="col-4">
+                                <div class="card">
+                                    <div class="card-hd">
+                                        <img src="" alt="">
+                                    </div>
+                                    <div class="card-bd"></div>
+                                    <div class="card-ft"></div>
+                                </div>
+                            </div>
+                            <div class="col-4"></div>
+                            <div class="col-4"></div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="profile">...</div>
+                        <div role="tabpanel" class="tab-pane" id="messages">...</div>
+                        <div role="tabpanel" class="tab-pane" id="settings">...</div>
+                    </div>
+                </div>
+                <div class="category-ft">
+                    <a href="" class="btn btn-primary btn-lg category-action">查看更多</a>
                 </div>
             </div>
         </div>
