--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,12 @@
                         <li class="active">
                             <a href="">首页</a>
                         </li>
-                        <li>
-                            <a href="">旅行产品</a>
+                        <li class="dropdown">
+                            <a href="" data-toggle="dropdown">旅行产品</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">产品列表</a></li>
+                                <li><a href="#">私人订制</a></li>
+                            </ul>
                         </li>
                         <li>
                             <a href="">旅行故事</a>
@@ -243,17 +247,59 @@
                     <!-- Tab panes -->
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active" id="home">
-                            <div class="col-4">
-                                <div class="card">
-                                    <div class="card-hd">
-                                        <img src="" alt="">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="card">
+                                        <div class="card-hd">
+                                            <img src="img/card.jpg" alt="">
+                                            <a class="card-overlay" href="">
+                                                <p class="overlay-label">查看详情</p>
+                                            </a>
+                                        </div>
+                                        <div class="card-bd">
+                                            <h4 class="card-bd__title">新加坡家庭游</h4>
+                                            <p class="card-bd__desc">三大乐园体验 · 全程五星</p>
+                                        </div>
+                                        <div class="card-ft">
+                                            <div class="card-ft__price">¥4566</div>
+                                        </div>
                                     </div>
-                                    <div class="card-bd"></div>
-                                    <div class="card-ft"></div>
+                                </div>
+                                <div class="col-4">
+                                    <div class="card">
+                                        <div class="card-hd">
+                                            <img src="img/card.jpg" alt="">
+                                            <a class="card-overlay" href="">
+                                                <p class="overlay-label">查看详情</p>
+                                            </a>
+                                        </div>
+                                        <div class="card-bd">
+                                            <h4 class="card-bd__title">新加坡家庭游</h4>
+                                            <p class="card-bd__desc">三大乐园体验 · 全程五星</p>
+                                        </div>
+                                        <div class="card-ft">
+                                            <div class="card-ft__price">¥4566</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <div class="card">
+                                        <div class="card-hd">
+                                            <img src="img/card.jpg" alt="">
+                                            <a class="card-overlay" href="">
+                                                <p class="overlay-label">查看详情</p>
+                                            </a>
+                                        </div>
+                                        <div class="card-bd">
+                                            <h4 class="card-bd__title">新加坡家庭游</h4>
+                                            <p class="card-bd__desc">三大乐园体验 · 全程五星</p>
+                                        </div>
+                                        <div class="card-ft">
+                                            <div class="card-ft__price">¥4566</div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-4"></div>
-                            <div class="col-4"></div>
                         </div>
                         <div role="tabpanel" class="tab-pane" id="profile">...</div>
                         <div role="tabpanel" class="tab-pane" id="messages">...</div>
