--- a/src/index.html
+++ b/src/index.html
@@ -311,7 +311,26 @@
                 </div>
             </div>
         </div>
-
+        <div class="category custom">
+            <div class="container">
+                <div class="category-bd">
+                    <div class="row">
+                        <div class="custom-left col-4">
+                            <h2>私人订制</h2>
+                            <p class="secondary">Customized Travel</p>
+                            <div class="custom-desc">
+                                <p>理解您的想法和需求</p>
+                                <p>给您更合理的行程和时间安排</p>
+                                <p>这就是我们要做的</p>
+                                <p>私人订制</p>
+                                <p>给您心想舒适的旅程</p>
+                            </div>
+                        </div>
+                        <div class="custom-right col-8"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
