--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <div class="category">
+        <div class="category bg-gray">
             <div class="container">
                 <div class="category-hd">
                     <h2>走进斑马</h2>
@@ -228,7 +228,7 @@
                 </div>
             </div>
         </div>
-        <div class="category">
+        <div class="category bg-gray">
             <div class="container">
                 <div class="category-hd">
                     <h2>精选旅游线路</h2>
@@ -315,7 +315,7 @@
             <div class="container">
                 <div class="category-bd">
                     <div class="row">
-                        <div class="custom-left col-4">
+                        <div class="custom-left">
                             <h2>私人订制</h2>
                             <p class="secondary">Customized Travel</p>
                             <div class="custom-desc">
@@ -325,8 +325,78 @@
                                 <p>私人订制</p>
                                 <p>给您心想舒适的旅程</p>
                             </div>
+                            <a class="custom-btn">
+                                <span class="iconfont icon-right"></span>
+                            </a>
                         </div>
-                        <div class="custom-right col-8"></div>
+                        <div class="custom-right">
+                            <img src="img/custom.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="category sales">
+            <div class="container">
+                <div class="category-hd">
+                    <h2>售卖渠道</h2>
+                    <p class="secondary">Sales Channels</p>
+                </div>
+                <div class="category-bd">
+                    <div class="row">
+                        <div class="col-3 logo"></div>
+                        <div class="col-3 logo"></div>
+                        <div class="col-3 logo"></div>
+                        <div class="col-3 logo"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="address">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-3 address-item">
+                            <h3 class="address-title">加入我们</h3>
+                            <ul>
+                                <li>投诉电话：400-021-9988</li>
+                                <li>商务合作：gudapeng@banmatrip.com</li>
+                                <li>市场合作：021-80392004-861</li>
+                                <li>同业合作：QQ 2940956048</li>
+                                <li>地址： 上海市浦东新区张江高科技园区浦软大厦</li>
+                            </ul>
+                        </div>
+                        <div class="col-3">
+                            <h3 class="address-title__link">用户协议</h3>
+                        </div>
+                        <div class="col-3">
+                            <h3 class="address-title__link">关注我们</h3>
+                            <h3 class="address-title__link">
+                                <a href="" class="share-link">
+                                    <span class="iconfont icon-weixin"></span>
+                                </a>
+                                <a href="" class="share-link">
+                                    <span class="iconfont icon-weibo"></span>
+                                </a>
+                                <a href="" class="share-link">
+                                    <span class="iconfont icon-zhihu"></span>
+                                </a>
+                            </h3>
+                        </div>
+                        <div class="col-3 contact">
+                            <a href="" class="btn btn-default btn-md">致电 <span class="iconfont icon-phone"></span></a>
+                            <a href="" class="btn btn-default btn-md">留言 <span class="iconfont icon-note"></span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <p>&copy;2017 斑马旅游 BMTRIP.COM 上海歌晨信息技术有限公司 北京斑马旅游有限公司</p>
+                            <p>国家旅游局经营许可证号: L-BJ-CJ00665 沪ICP备16018253号</p>
+                        </div>
                     </div>
                 </div>
             </div>
