--- a/src/index.html
+++ b/src/index.html
@@ -345,11 +345,36 @@
                 </div>
                 <div class="category-bd">
                     <div class="row">
-                        <div class="col-3 logo"></div>
-                        <div class="col-3 logo"></div>
-                        <div class="col-3 logo"></div>
-                        <div class="col-3 logo"></div>
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
                     </div>
+                    <div class="row">
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
+                        <a class="col-3 logo" href="">
+                            <img src="img/logo_03.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="category-ft">
+                    <a href="" class="btn btn-primary btn-lg category-action">查看更多</a>
                 </div>
             </div>
         </div>
