--- a/src/index.html
+++ b/src/index.html
@@ -410,7 +410,7 @@
                             </h3>
                         </div>
                         <div class="col-3 contact">
-                            <a href="" class="btn btn-default btn-md">致电 <span class="iconfont icon-phone"></span></a>
+                            <a class="btn btn-default btn-md md-trigger" data-modal="modal-1">致电 <span class="iconfont icon-phone"></span></a>
                             <a href="" class="btn btn-default btn-md">留言 <span class="iconfont icon-note"></span></a>
                         </div>
                     </div>
@@ -427,8 +427,15 @@
                 </div>
             </div>
         </div>
+        <div class="md-modal md-effect-1" id="modal-1">
+            <button type="button" class="close"><span >&times;</span></button>
+            <div class="md-content">
+                <h3>Modal Dialog</h3>
 
-
+                </div>
+            </div>
+        </div>
+        <div class="md-overlay"></div><!-- the overlay element -->
 
         <script src="https://cdn.bootcss.com/require.js/2.3.5/require.min.js" data-main="js/main"></script>
     </body>
