首页，承诺，售卖渠道

--- a/src/product.html
+++ b/src/product.html
@@ -195,49 +195,55 @@
     </div>
 </div>
 <div class="footer">
-    <div class="address">
-        <div class="container">
-            <div class="row">
-                <div class="col-3 address-item">
-                    <h3 class="address-title">加入我们</h3>
-                    <ul>
-                        <li>投诉电话：400-021-9988</li>
-                        <li>商务合作：gudapeng@banmatrip.com</li>
-                        <li>市场合作：021-80392004-861</li>
-                        <li>同业合作：QQ 2940956048</li>
-                        <li>地址： 上海市浦东新区张江高科技园区浦软大厦</li>
-                    </ul>
-                </div>
-                <div class="col-3">
-                    <h3 class="address-title__link">用户协议</h3>
-                </div>
-                <div class="col-3">
-                    <h3 class="address-title__link">关注我们</h3>
-                    <h3 class="address-title__link">
-                        <a href="" class="share-link">
-                            <span class="iconfont icon-weixin"></span>
-                        </a>
-                        <a href="" class="share-link">
-                            <span class="iconfont icon-weibo"></span>
-                        </a>
-                        <a href="" class="share-link">
-                            <span class="iconfont icon-zhihu"></span>
-                        </a>
-                    </h3>
-                </div>
-                <div class="col-3 contact">
-                    <a class="btn btn-default btn-md md-trigger" data-modal="modal-1">致电 <span class="iconfont icon-phone"></span></a>
-                    <a href="" class="btn btn-default btn-md">留言 <span class="iconfont icon-note"></span></a>
+    <div class="footer-bg">
+        <div class="footer-bg-top"></div>
+        <div class="footer-bg-bottom"></div>
+    </div>
+    <div class="footer-wrapper">
+        <div class="address">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3 address-item">
+                        <h3 class="address-title">加入我们</h3>
+                        <ul>
+                            <li>投诉电话：400-021-9988</li>
+                            <li>商务合作：gudapeng@banmatrip.com</li>
+                            <li>市场合作：021-80392004-861</li>
+                            <li>同业合作：QQ 2940956048</li>
+                            <li>地址： 上海市浦东新区张江高科技园区浦软大厦</li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <h3 class="address-title__link">用户协议</h3>
+                    </div>
+                    <div class="col-3">
+                        <h3 class="address-title__link">关注我们</h3>
+                        <h3 class="address-title__link">
+                            <a href="" class="share-link">
+                                <span class="iconfont icon-weixin"></span>
+                            </a>
+                            <a href="" class="share-link">
+                                <span class="iconfont icon-weibo"></span>
+                            </a>
+                            <a href="" class="share-link">
+                                <span class="iconfont icon-zhihu"></span>
+                            </a>
+                        </h3>
+                    </div>
+                    <div class="col-3 contact">
+                        <a class="btn btn-default btn-md md-trigger" data-modal="modal-1">致电 <span class="iconfont icon-phone"></span></a>
+                        <a href="" class="btn btn-default btn-md">留言 <span class="iconfont icon-note"></span></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <p>&copy;2017 斑马旅游 BMTRIP.COM 上海歌晨信息技术有限公司 北京斑马旅游有限公司</p>
-                    <p>国家旅游局经营许可证号: L-BJ-CJ00665 沪ICP备16018253号</p>
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <p>&copy;2017 斑马旅游 BMTRIP.COM 上海歌晨信息技术有限公司 北京斑马旅游有限公司</p>
+                        <p>国家旅游局经营许可证号: L-BJ-CJ00665 沪ICP备16018253号</p>
+                    </div>
                 </div>
             </div>
         </div>
