--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,6 @@
                     <a href="" class="btn btn-reverse btn-lg category-action">查看更多</a>
                 </div>
             </div>
-
         </div>
         <div class="category bg-gray">
             <div class="container">
@@ -415,8 +414,8 @@
                                 </h3>
                             </div>
                             <div class="col-3 contact">
-                                <a class="btn btn-default btn-md md-trigger" data-modal="modal-1">致电 <span class="iconfont icon-phone"></span></a>
-                                <a href="" class="btn btn-default btn-md">留言 <span class="iconfont icon-note"></span></a>
+                                <a class="btn btn-default btn-md md-trigger" data-modal="tel">致电 <span class="iconfont icon-phone"></span></a>
+                                <a class="btn btn-default btn-md md-trigger" data-modal="consult">留言 <span class="iconfont icon-note"></span></a>
                             </div>
                         </div>
                     </div>
@@ -433,12 +432,38 @@
                 </div>
             </div>
         </div>
-        <div class="md-modal md-effect-1" id="modal-1">
+        <div class="md-modal md-effect-1" id="consult">
+            <button type="button" class="close"><span >&times</span></button>
             <div class="md-content">
-                <button type="button" class="close"><span >&times;</span></button>
-                <h3>Modal Dialog</h3>
-
+                <h3>客服咨询</h3>
+                <p class="md-desc">诚挚的斑马客服将主动给您回电</p>
+                <div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-6">
+                                <input type="text" class="form-control" placeholder="姓名">
+                            </div>
+                            <div class="col-6">
+                                <input type="text" class="form-control" placeholder="手机">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <textarea class="form-control" placeholder="咨询内容" rows="3"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-action">
+                        <a href="" class="btn btn-primary">确定</a>
+                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="md-modal md-effect-1" id="tel">
+            <button type="button" class="close"><span >&times</span></button>
+            <div class="md-content">
+                <h3>致电斑马</h3>
+                <p class="md-desc">400-021-9988</p>
             </div>
         </div>
         <div class="md-overlay"></div><!-- the overlay element -->
