--- a/src/product.html
+++ b/src/product.html
@@ -259,7 +259,7 @@
 </div>
 <div class="md-overlay"></div><!-- the overlay element -->
 
-<script src="https://cdn.bootcss.com/require.js/2.3.5/require.min.js" data-main="js/main"></script>
+<script src="https://cdn.bootcss.com/require.js/2.3.5/require.min.js" data-main="js/product"></script>
 <script type="text/javascript">
     require(["product"])
 </script>
