--- a/src/product.html
+++ b/src/product.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-<div class="bm-product">
+<div class="bm-product" ms-controller="test">
     <div class="bm-product_head" style="background-image: url(img/productHead.jpg);">
         <div class="container">
             <div class="product-search">
@@ -70,19 +70,19 @@
         <div class="menu-type menu-dest">
             <div class="left-text">目的地</div>
             <ul class="list dest-list">
-                <li class="active-btn">不限目的地</li>
-                <li>泰国</li>
-                <li>日本</li>
-                <li>巴厘岛</li>
-                <li>欧洲</li>
+                <li data-id="0" class="active-btn">不限目的地</li>
+                <li data-id="1">泰国</li>
+                <li data-id="2">日本</li>
+                <li data-id="3">巴厘岛</li>
+                <li data-id="4">欧洲</li>
             </ul>
         </div>
         <div class="menu-type menu-product_type">
             <div class="left-text">类型</div>
-            <ul class="list dest-list">
-                <li class="active-btn">全部类型</li>
-                <li>私家小团</li>
-                <li>精致拼团</li>
+            <ul class="list type-list">
+                <li data-id="0" class="active-btn">全部类型</li>
+                <li data-id="1">私家小团</li>
+                <li data-id="2">精致拼团</li>
             </ul>
         </div>
     </div>
@@ -260,8 +260,7 @@
 <div class="md-overlay"></div><!-- the overlay element -->
 
 <script src="https://cdn.bootcss.com/require.js/2.3.5/require.min.js" data-main="js/product"></script>
-<script type="text/javascript">
-    require(["product"])
+<script>
 </script>
 </body>
 </html>
