--- a/src/login.html
+++ b/src/login.html
@@ -456,23 +456,19 @@
                 <div class="form-action">
                   <a href="" class="btn btn-reverse">确定</a>
                   <p class="help-block"><a class="pull-left">忘记密码</a><a class="pull-right">使用短信验证码登录</a></p>
-                  <div style="display: block;" class="other_login_type sns-login-container">
+                  <div class="other_login_type sns-login-container">
                     <fieldset class="oth_type_tit">
                       <legend class="oth_type_txt">其他方式登录</legend>
                     </fieldset>
                     <div class="oth_type_links">
-                      <div class="col-6">
-                        <a href="">
-                          <span class="iconfont icon-weixin"></span>
-                          <span>微信登录</span>
-                        </a>
-                      </div>
-                      <div class="col-6">
-                        <a href="">
-                          <span class="iconfont icon-weixin"></span>
-                          <span>微信登录</span>
-                        </a>
-                      </div>
+                      <a href="" class="oth_type_link">
+                        <p class="sns-logo"><span class="iconfont icon-weixin"></span></p>
+                        <span>微信登录</span>
+                      </a>
+                      <a href="" class="oth_type_link">
+                        <p class="sns-logo"><span class="iconfont icon-zhuce"></span></p>
+                        <span>注册</span>
+                      </a>
                     </div>
                   </div>
                 </div>
